add job complete fail handler
